footer alignment issues at mid breakpoint

--- a/styles/min-width-1000px/base.css
+++ b/styles/min-width-1000px/base.css
@@ -10,7 +10,7 @@
         right: initial;
         left: 0px;
     }
-    body > *
+    article.page, footer
     {
         margin-left: 310px;
         padding-left: 20px;
